tests/algorithms/x/Java/data_structures/heap/heap.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden212_heap827892349/001/Main.java:88: error: incompatible types: double[] cannot be converted to Object[]
            s = s + _p(_geto(h, i_1));
                             ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
